--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@
 
 }
 body{
-    background-image: url(../imagenes/fondo_principal.jp/g);
+    background-image: url(../imagenes/fondo_principal.jpg);
 }
 h1{
  text-align: center;
